# fourier-pen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  run_debug.bat  setup.bat
src/: globals.h  graphics.cpp  graphics.h  main.cpp  processing.cpp  processing.h  samples.h
src/include/glad/: glad.c  glad.h
